@@ -8,22 +8,26 @@ import com.fiap.order.management.entity.Item;
 import com.fiap.order.management.entity.Order;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class OrderMapper {
+
+    // Private constructor to hide the implicit public one
+    private OrderMapper() {
+        throw new UnsupportedOperationException("This is a utility class and cannot be instantiated");
+    }
 
     public static Order toModel(OrderDomain orderDomain) {
         List<Item> items = orderDomain.getItems().stream()
                 .map(OrderMapper::toModel)
-                .collect(Collectors.toList());
+                .toList(); // Replaced Collectors.toList() with toList()
 
-        return new Order(null, orderDomain.getCustomerId(),orderDomain.getStatus(), items);
+        return new Order(null, orderDomain.getCustomerId(), orderDomain.getStatus(), items);
     }
 
     public static OrderDomain toDomain(Order order) {
         List<ItemDomain> itemDomains = order.getItems().stream()
                 .map(OrderMapper::toDomain)
-                .collect(Collectors.toList());
+                .toList(); // Replaced Collectors.toList() with toList()
 
         return new OrderDomain(order.getCustomerId(), itemDomains);
     }
@@ -39,7 +43,7 @@ public class OrderMapper {
     public static LogisticOrderDTO toLogisticOrderDTO(Order order) {
         List<ItemDTO> items = order.getItems().stream()
                 .map(item -> new ItemDTO(item.getProductId(), item.getQuantity()))
-                .collect(Collectors.toList());
+                .toList(); // Replaced Collectors.toList() with toList()
 
         return new LogisticOrderDTO(
                 order.getId(),
